# pretix-banktool

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.rst  pyproject.toml  setup.cfg  setup.py
pretix_banktool/: config.py  main.py  parse.py  testing.py  upload.py  utils.py
