[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pretix-banktool"
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
description = "Command-line client for pretix that allows to synchronize bank transaction statements to pretix"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["pretix", "fints", "bank"]
license = {text = "GPL-3.0-Only"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=6,<9",
    "fints==4.*,>=4.2.0",
    "requests",
    "mt-940>=4.12"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pretix_banktool.__version__"}

[project.scripts]
pretix-banktool = "pretix_banktool.main:main"
